name: ohm-chat-server
version: 1.0.0.0
homepage: http://github.com/ocharles/engine.io
license: BSD3
license-file: LICENSE
author: Oliver Charles
maintainer: ollie@ocharles.org.uk
category: Web
build-type: Simple
cabal-version: >=1.20

-- Data-Dir: resources
-- Data-files:
--   index.html
--   main.js
--   style.css

Library
  exposed-modules: ChatTypes
  build-depends:
    aeson,
    base,
    containers,
    text
  if impl(ghcjs)
    build-depends:
      ghcjs-base
  ghc-options: -Wall -O2 -threaded
  default-language: Haskell2010

Executable chat-snap
  default-language: Haskell2010
  if impl(ghcjs)
    buildable: False
  if !impl(ghcjs)
    build-depends:
      aeson,
      base,
      containers,
      ohm-chat-server,
      engine-io,
      engine-io-snap,
      snap-core,
      snap-cors,
      snap-server,
      socket-io,
      stm,
      text,
      mtl,
      transformers
  main-is: MainSnap.hs
  other-modules: Paths_ohm_chat_server Chat
  ghc-options: -Wall -O2 -threaded
  default-language: Haskell2010


-- Executable chat-yesod
--   default-language: Haskell2010
--   build-depends:
--     aeson,
--     base,
--     engine-io,
--     yesod-core,
--     yesod-static,
--     engine-io-yesod,
--     socket-io,
--     stm,
--     text,
--     transformers,
--     template-haskell
--   main-is: MainYesod.hs
--   ghc-options: -Wall -O2 -threaded
